# Atelier

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  package.json  pyproject.toml  tailwind.config.js
Tasks/: README.md  SCHEMA.md
Tasks/Phase1-Foundation/: 01-enhanced-image-management.md  02-import-migration-tools.md  03-duplicate-detection.md  04-data-completeness-dashboard.md
Tasks/Phase2-Professional/: 01-provenance-chain-builder.md  02-exhibition-history-module.md  03-literature-bibliography.md  04-catalog-numbering-system.md
Tasks/Phase3-Collaboration/: 01-multi-user-support.md  02-authentication-workflow.md  03-print-ready-export.md  04-public-tip-submission.md
Tasks/Phase4-Discovery/: 01-auction-house-integrations.md  02-price-history-tracking.md  03-museum-collection-search.md  04-online-catalog-portal.md
config/: settings.py
display/hardware/: README.md
docs/: WALKTHROUGH.md
scripts/: fix_paths.py  migrate_add_display_settings.py
src/: __init__.py  cli.py  scheduler.py
src/api/: main.py
src/api/routes/: alerts.py  artworks.py  biography.py  display.py  exhibitions.py  gmail.py  health.py  images.py  outreach.py  scraper.py
src/database/: __init__.py  models.py  session.py
src/filters/: __init__.py  confidence.py
src/notifications/: __init__.py  email.py
src/scrapers/: __init__.py  artnet.py  base.py  ebay.py  ebay_api.py  invaluable.py  liveauctioneers.py  orchestrator.py
src/services/: __init__.py  artwork_service.py  gmail_service.py  image_service.py
src/utils/: __init__.py  text.py
tests/: __init__.py  conftest.py
tests/filters/: test_confidence.py
(+17 files in other folders)
